feat: Add wake word functionality
Introduces a new wake word feature allowing users to set a custom activation phrase for the robot via the web UI. This includes adding a new wake word state, updating the UI to include a wake word input, and adding a corresponding icon. Also includes styling updates for potential future animations and permission requests for microphone access.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
   .animate-rgb-text-glow {
     animation: rgb-text-glow 8s ease-in-out infinite;
   }
+  
+  @keyframes rgb-border-glow {
+    0% { box-shadow: 0 0 3px #ff0000, 0 0 5px #ff0000, inset 0 0 3px #ff0000; }
+    25% { box-shadow: 0 0 3px #ffff00, 0 0 5px #ffff00, inset 0 0 3px #ffff00; }
+    50% { box-shadow: 0 0 3px #00ffd5, 0 0 5px #00ffd5, inset 0 0 3px #00ffd5; }
+    75% { box-shadow: 0 0 3px #7a00ff, 0 0 5px #7a00ff, inset 0 0 3px #7a00ff; }
+    100% { box-shadow: 0 0 3px #ff0000, 0 0 5px #ff0000, inset 0 0 3px #ff0000; }
+  }
+  .animate-rgb-border-glow {
+    animation: rgb-border-glow 6s ease-in-out infinite;
+  }
 </style>
 </head>
   <body class="bg-gray-900 text-gray-100">
